<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt">
    <string name="app_name">UNES</string>
    <string name="logo">Logo</string>
    <string name="login_username">Usuário</string>
    <string name="login_password">Senha</string>
    <string name="login_connect">Conectar</string>
    <string name="connecting">Conectando</string>
    <string name="completed">Completo</string>
    <string name="failed_to_connect">Falha de conexão</string>
    <string name="invalid_login">Login incorreto</string>
    <string name="going_to_student_page">Indo para o Portal do Aluno</string>
    <string name="accessing_portal">Acessando o portal</string>
    <string name="username_too_short">Usuário muito curto</string>
    <string name="password_too_short">Senha muito curta</string>
    <string name="processing_information">Processando informações</string>
    <string name="going_to_grades_page">Indo para página de notas</string>
    <string name="grades_obtained">Notas obtidas</string>
    <string name="monday">Segunda</string>
    <string name="tuesday">Terça</string>
    <string name="wednesday">Quarta</string>
    <string name="thursday">Quinta</string>
    <string name="friday">Sexta</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="title_schedule">Horário</string>
    <string name="title_messages">Mensagens</string>
    <string name="title_grades">Notas</string>
    <string name="title_disciplines">Disciplinas</string>
    <string name="title_calendar">Calendário</string>
    <string name="title_more">Mais</string>
    <string name="classes_not_found">O horário do semestre não foi encontrado</string>
    <string name="check_schedule_in_official_page">Vá ao site oficial e verifique se os horários estão disponíveis. Tentaremos buscar essa informação mais tarde</string>
    <string name="that_s_embarrassing">Bem... Isso é constrangedor</string>
    <string name="sad">Triste</string>
    <string name="discipline_start_end_time">%1$s ~ %2$s</string>
    <string name="discipline_code_group">%1$s - %2$s</string>
    <string name="draft_class">Rascunho de Aula</string>
    <string name="final_score_text">Nota final</string>
    <string name="partial_mean">Média Parcial</string>
    <string name="all_semester_part_completed">Obteve notas de um novo semestre</string>
    <string name="disconnected">Desconectado! Você mudou sua senha?</string>
    <string name="data_deleted">Dados apagados</string>
    <string name="retrieving_data">Recuperando dados...</string>
    <string name="account_name">Sincronização Sagres</string>
    <string name="sagres_sync">Atualização Sagres</string>
    <string name="title_auto_sync">Atualização Automática</string>
    <string name="auto_sync_warning">UNES usa o recurso de atualização automática do Android para manter os dados atualizados com o Sagres.\n\nParece que este recurso está desativado\n\nCom a atualização automática desligada você não irá receber notificações quando algo novo for postado</string>
    <string name="class_additional_info_format">%1$s - %2$d horas - %3$d faltas</string>
    <string name="android">Android</string>
    <string name="continue_anyway">Continuar</string>
    <string name="change_config">Ativar</string>
    <string name="channel_messages">Mensagens</string>
    <string name="channel_group_grades">Notas</string>
    <string name="grade_create_notification">Foi criada a avaliação %1$s da disciplina %2$s, mas a nota ainda não foi postada</string>
    <string name="grade_change_notification">A avaliação %1$s da disciplina %2$s mudou de data</string>
    <string name="new_grade_posted">Nova nota postada</string>
    <string name="grade_posted_notification">A nota da avaliação %1$s da disciplina %2$s está disponível.\nVá olhar!</string>
    <string name="new_grade_notification_great">A nota da avaliação %1$s da disciplina %2$s está disponível.\Vá olhar!\n\Parabéns!</string>
    <string name="channel_grades_posted">Notas postadas</string>
    <string name="channel_grades_date_changed">Data de avaliação</string>
    <string name="channel_grades_created">Criação de notas</string>
    <string name="grade_evaluation_date_change">Data de avaliação mudou</string>
    <string name="new_grade_created">Nova nota criada</string>
    <string name="channel_group_messages">Mensagens</string>
    <string name="student_freshman">Você é um calouro? Não tem semestres</string>
    <string name="student_semester">Você está no %1$dº semestre</string>
    <string name="student_score">Seu score é: %1$.1f</string>
    <string name="last_information_update">Última atualização dos dados: %1$s</string>
    <string name="title_calendar_desc">Veja o calendário acadêmico</string>
    <string name="updated">Atualizado!</string>
    <string name="pref_sync_only_wifi">Somente Wifi</string>
    <string name="pref_sync_only_wifi_disabled">App irá sincronizar em qualquer rede</string>
    <string name="pref_sync_only_wifi_enabled">App irá sincronizar apenas no wifi</string>
    <string name="pref_notifications_summary">Abre o controle de notificações</string>
    <string name="pref_show_message_notification">Recados</string>
    <string name="pref_show_message_notification_enabled">Notificar ao receber uma mensagem</string>
    <string name="pref_show_message_notification_disabled">Não notificar ao receber uma mensagem</string>
    <string name="pref_do_not_show_score">Não mostrar na tela do perfil</string>
    <string name="pref_do_show_score">Mostrar na tela do perfil</string>
    <string name="pref_show_grades_notification">Notas</string>
    <string name="pref_show_grades_notification_disabled">Não notificar quando receber uma nota</string>
    <string name="pref_show_grades_notification_enabled">Notificar quando receber uma nota</string>
    <string name="pref_notification_sound">Som</string>
    <string name="pref_notification_header">Notificações</string>
    <string name="pref_title_vibrate">Vibrar</string>
    <string name="pref_header_data_sync">Dados e sincronização</string>
    <string name="pref_sync_frequency">Frequência de atualização</string>
    <string name="pref_sync_frequency_enabled">A cada %1$s</string>
    <string name="settings">Configurações</string>
    <string name="pref_account_settings">Conta</string>
    <string name="show_score">Score</string>
    <string name="pref_new_message_vibration_enabled">Vibrar na notificação</string>
    <string name="pref_new_message_vibration_disabled">Não vibrar na notificação</string>
    <string name="pref_notification_sound_summary">Mudar som de notificação</string>
    <string name="pref_sync_frequency_never">Nunca atualizar</string>
    <string name="pref_grades_posted">Notas postadas</string>
    <string name="pref_grades_date_changed">Datas de avaliação</string>
    <string name="pref_grades_created">Avaliação criada</string>
    <string name="pref_notification_grade_date_changed">Controle notificações quando a data da avaliação mudar</string>
    <string name="pref_notification_grade_created">Controle notificações quando uma avaliação for criada</string>
    <string name="pref_notification_grade_posted">Controle  notificações quando a nota for postada</string>
    <string name="application_settings">Aplicativo</string>
    <string name="pref_double_back">Duas vezes para sair</string>
    <string name="pref_double_back_on">Aperte voltar duas vezes para sair</string>
    <string name="pref_double_back_off">Aperte voltar uma vez para sair</string>
    <string name="pref_logoff">Desconectar</string>
    <string name="pref_logoff_summary">Sair e limpar informações</string>
    <string name="pref_title_about_and_feedback">Sobre e Feedback</string>
    <string name="suggestions">Sugestões e críticas</string>
    <string name="about_app_title">Sobre o aplicativo</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>2 horas</item>
        <item>3 horas</item>
        <item>6 horas</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="credits">Créditos</string>
    <string name="class_details_credits">Carga horária: %1$d horas</string>
    <string name="class_details_class_period">Período de aulas: %1$s</string>
    <string name="class_details_teacher">Professor: %1$s</string>
    <string name="class_details_department">Departamento: %1$s</string>
    <string name="class_details_miss_limit">Limite de Faltas: %1$d</string>
    <string name="class_details_classes_missed">Você faltou %1$d aulas</string>
    <string name="class_details_miss_remain">Você ainda pode faltar %1$d vezes</string>
    <string name="class_details_previous_class">Aula anterior: %1$s</string>
    <string name="class_details_next_class">Próxima aula: %1$s</string>
    <string name="card_class_details_this_is_a_draft">Este é um rascunho, atualize a aula para ter informação completa</string>
    <string name="class_name_list_format">%1$s %2$s</string>
    <string name="class_details_failed_by_lack">Você foi reprovado por falta</string>
    <string name="class_details_can_not_miss_anymore">Você não pode mais faltar</string>
    <string name="press_back_twice">Pressione voltar novamente para sair do aplicativo</string>
    <string name="label_partial_mean">Média parcial</string>
    <string name="label_need_final_mean">Nota necessária na final</string>
    <string name="label_final_mean">Média final</string>
    <string name="label_current_mean">Média</string>
    <string name="master_update_status_message">Estado do Sincronizador é: %1$s</string>
    <string name="enable">Ativar</string>
    <string name="disable">Desativar</string>
    <string name="master_update_connections">Número de conexões: %1$d</string>
    <string name="nav_title_profile">Perfil</string>
    <string name="nav_title_unes_adventure">A Aventura</string>
    <string name="nav_title_logout">Sair da conta</string>
    <string name="nav_title_feedback">Comentários e sugestões</string>
    <string name="nav_title_about">Sobre o UNES</string>
    <string name="uneverse_welcome">O UNEVerso</string>
    <string name="uneverse_know_more">Saiba Mais</string>
    <string name="uneverse_first_steps">Primeiros Passos</string>
    <string name="transition_logo" translatable="false">transicao_logo</string>
    <string name="gold_members_only">Esta função está disponível apenas para membros Macaco Gold, torne-se um hoje mesmo!</string>
    <string name="under_tests">Em Fase de Teste Alfa (Viabilidade)</string>
    <string name="uneverse">UNEVerso</string>
    <string name="event_continue">Continuar</string>
    <string name="event_long_description_hint">Descrição Longa do Evento</string>
    <string name="event_payment_and_certificate">Quanto custa e o que as pessoas ganham?</string>
    <string name="event_part_three_message">Estamos quase terminando</string>
    <string name="event_price_hint">Preço</string>
    <string name="event_hours_hint">Carga Horária</string>
    <string name="event_ticket_free_cb">A entrada do evento é gratuita</string>
    <string name="event_hours_certificate_cb">O evento dá certificado de carga horária</string>
    <string name="event_organization_hint">Organização</string>
    <string name="event_organization_definition">Organização é o provedor do evento. Exemplo: DA de Engenharia de Computação</string>
    <string name="update_control">Controle de Atualização</string>
    <string name="event_approval">Aprovação de Eventos</string>
    <string name="logout_universe">Sair do Universo</string>
    <string name="delete_unes_messages">Apagar mensagens UNES</string>
</resources>