<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_data_sync"
        android:key="data_and_sync_category">

        <ListPreference
            android:key="sync_frequency"
            android:title="@string/pref_sync_frequency"
            android:summary="@string/pref_sync_frequency_enabled"
            android:defaultValue="60"
            android:icon="@drawable/ic_sync_accent_30dp"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification_category"
        android:title="@string/pref_notification_header">

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_book_accent_30dp"
            android:key="show_class_notification"
            android:summaryOff="@string/pref_show_class_notification_disabled"
            android:summaryOn="@string/pref_show_class_notification_enabled"
            android:title="@string/pref_show_class_notification"/>

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_message_accent_30dp"
            android:key="show_message_notification"
            android:summaryOff="@string/pref_show_message_notification_disabled"
            android:summaryOn="@string/pref_show_message_notification_enabled"
            android:title="@string/pref_show_message_notification"/>

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_vibration_accent_30dp"
            android:key="notifications_new_message_vibrate"
            android:summaryOff="@string/pref_new_message_vibration_disabled"
            android:summaryOn="@string/pref_new_message_vibration_enabled"
            android:title="@string/pref_title_vibrate"/>

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:icon="@drawable/ic_music_note_accent_30dp"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/pref_notification_sound_summary"
            android:title="@string/pref_notification_sound"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_account_settings">

        <Preference
            android:title="@string/pref_logoff"
            android:summary="@string/pref_not_working_still"
            android:icon="@drawable/ic_logoff_accent_30dp"/>
    </PreferenceCategory>

</PreferenceScreen>