<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_clock_black_24dp"
        android:title="@string/title_schedule"/>

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages_black_24dp"
        android:title="@string/title_messages"/>

    <item
        android:id="@+id/navigation_grades"
        android:icon="@drawable/ic_grades_black_24dp"
        android:title="@string/title_grades"/>

    <item
        android:id="@+id/navigation_disciplines"
        android:icon="@drawable/ic_book_open_black_24dp"
        android:title="@string/title_disciplines"/>

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_black_24dp"
        android:title="@string/title_calendar"/>

</menu>