<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_profile"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_nav_24dp"
            android:title="@string/nav_title_profile"/>
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_gamepad_variant_accent_30dp"
            android:title="@string/nav_title_unes_adventure"/>
    </group>

    <group
        android:id="@+id/nav_group_main_content"
        android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_clock_black_24dp"
            android:title="@string/title_schedule"
            app:itemTextColor="@drawable/side_nav_schedule_text"/>
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_messages_black_24dp"
            android:title="@string/title_messages"
            app:itemTextColor="@drawable/side_nav_messages_text"/>

        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_grades_black_24dp"
            android:title="@string/title_grades"
            app:itemTextColor="@drawable/side_nav_grades_text"/>

        <item
            android:id="@+id/nav_disciplines"
            android:icon="@drawable/ic_book_open_black_24dp"
            android:title="@string/title_disciplines"
            app:itemTextColor="@drawable/side_nav_disciplines_text"/>

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_black_24dp"
            android:title="@string/title_calendar"
            app:itemTextColor="@drawable/side_nav_calendar_text"/>
    </group>

    <group
        android:id="@+id/nav_group_settings"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_title_logout"
            android:icon="@drawable/ic_logoff_accent_30dp"/>

    </group>

    <group
        android:id="@+id/nav_group_others"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_feedback"
            android:title="@string/nav_title_feedback"/>

        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_title_about"/>

    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>
    -->

</menu>
