<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="16dp"
            android:clipToPadding="false">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/uneverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uneverse"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/logout_uneverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_universe"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/master_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_control"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/event_approve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_approval"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button.Colored"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/delete_unes_messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_unes_messages"
                android:layout_margin="8dp"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

    </ScrollView>
</layout>
