<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_sync_status"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_sync_black_24dp"
        android:tint="?attr/color_accent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tv_status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/master_update_status_message"
        android:layout_below="@id/iv_sync_status"
        android:gravity="center"
        android:textColor="@color/primaryText"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_connections"
        android:layout_below="@id/tv_status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/master_update_connections"
        android:gravity="center"
        android:textColor="@color/secondaryText"
        android:fontFamily="@font/roboto_regular"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_below="@id/tv_connections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="30"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_enable"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/enable"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_disable"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/disable"/>
    </LinearLayout>

</RelativeLayout>