<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uneverse_welcome"
            android:textColor="@color/primaryText"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="48dp"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_unes_colored"
            android:transitionName="@string/transition_logo"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_know_more"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/uneverse_know_more"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            style="@style/Base.Widget.AppCompat.ButtonBar.AlertDialog"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_first_steps"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/uneverse_first_steps"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textAllCaps="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_alignParentRight="true"
            tools:ignore="RelativeOverlap"/>

    </RelativeLayout>
</layout>