<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_tickets_colored_512dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/event_part_three_message"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textAlignment="gravity"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto_medium"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/event_payment_and_certificate"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/roboto_regular"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_event_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_ticket_free_cb"
                android:checked="false"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_price_hint"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_provides_hours"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_hours_certificate_cb"
                android:checked="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hours_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_hours_hint"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_info_outline_black_24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_organization_definition"
                    android:textColor="@color/primaryText"
                    android:fontFamily="@font/roboto_regular"/>

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_organization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_organization_hint"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="text|textCapSentences|textAutoComplete|textAutoCorrect"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_long_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_long_description_hint"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLength="1024"
                    android:inputType="text|textAutoCorrect|textAutoComplete|textCapSentences|textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/event_continue"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_gravity="end"/>

        </LinearLayout>
    </ScrollView>
</layout>